# lang

./: Cargo.toml  README.md
examples/: add.lang  cat.lang  enums.lang  fib.lang  fn_add.lang  hello.lang  while.lang  yes.lang
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ast_from_tokens.rs
fuzz/src/: lib.rs
src/: cli.rs  interner.rs  lib.rs  main.rs  type_checker.rs
src/ast/: ast_block.rs  ast_enum.rs  ast_fn.rs  ast_import.rs  ast_struct.rs  error.rs  mod.rs
src/ast/ast_expr/: array.rs  debug.rs  error.rs  func.rs  if_expr.rs  match_expr.rs  mod.rs  struct_create.rs
src/cl_export/: cl_vals.rs  mod.rs
src/error/: mod.rs
src/hlir/: func.rs  mod.rs  module.rs
src/lexer/: error.rs  mod.rs
src/mlir/: func.rs  mod.rs  module.rs
src/rvsdg/: builder.rs  display.rs  graphviz.rs  lower.rs  mod.rs  node.rs  optimize.rs  to_cranelift.rs
src/rvsdg/lower/: error.rs  mod.rs  theta.rs
src/struct_layout/: dfs.rs  error.rs  mod.rs
src/symbols/: error.rs  mod.rs
src/type_checker/: error.rs  expr.rs  mod.rs  statement.rs
src/type_checker/tests/: arithmetic.rs  arrays.rs  comparisons.rs  control_flow.rs  functions.rs  integration.rs  mod.rs  operators.rs  returns.rs  structs.rs  variables.rs
src/types/: error.rs  mod.rs
tests/: example_dir_test.rs
