[package]
name = "lang"
version = "0.1.0"
edition = "2024"

[dependencies]
codespan-reporting = "0.12.0"
color-eyre = "0.6.5"
colored = "3.0.0"
cranelift = { version = "0.123.2", features = ["native"] }
cranelift-codegen = "0.123.2"
cranelift-frontend = "0.123.2"
cranelift-module = { version = "0.123.2", features = ["core"] }
cranelift-object = "0.123.2"
parking_lot = "0.12.4"
quickscope = "0.2.0"
rustc-hash = "2.1.1"
smallvec = "1.13"
target-lexicon = "0.13.3"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-chrome = "0.7"
tracing-tree = "0.4.1"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.profiling]
inherits = "release"
debug = true

[profile.profiling.package."*"]
debug = true

